--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,7 @@ pipeline:
   deploy_to_dev:
     image: quay.io/ukhomeofficedigital/kd:latest
     environment:
+      - KUBE_SERVER=https://kube-dev.dsp.notprod.homeoffice.gov.uk
       - KUBE_NAMESPACE=dev-induction
     commands:
       - cd kube
