--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -11,7 +11,7 @@ spec:
         name: signed-commit-check
     spec:
       containers:
-      - name: hello-world-nodejs
+      - name: signed-commit-check
         image: quay.io/ukhomeofficedigital/signed-commit-check:{{.DRONE_COMMIT_SHA}}
         ports:
           - containerPort: 4000
