--- a/kube/deployment.yml
+++ b/kube/deployment.yml
@@ -14,25 +14,14 @@ spec:
       - name: signed-commit-check
         image: quay.io/ukhomeofficedigital/signed-commit-check:{{.DRONE_COMMIT_SHA}}
         ports:
-          - containerPort: 4000
+          - name: http
+            containerPort: 4000
         env:
           - name: GITHUB_PRIVATEKEY
             valueFrom:
               secretKeyRef:
                 name: secrets
                 key: GITHUB_PRIVATEKEY
-      - name: proxy
-        image: quay.io/ukhomeofficedigital/nginx-proxy:v1.6.1
-        env:
-          - name: PROXY_SERVICE_HOST
-            value: '127.0.0.1'
-          - name: PROXY_SERVICE_PORT
-            value: '4000'
-          - name: LOG_FORMAT_NAME
-            value: json
-        ports:
-          - name: https
-            containerPort: 443
         resources:
           limits:
             cpu: 250m
