--- a/kube/service.yml
+++ b/kube/service.yml
@@ -7,8 +7,8 @@ metadata:
   name: signed-commit-check-service
 spec:
   ports:
-  - name: https
-    port: 443
-    targetPort: https
+  - name: http
+    port: 80
+    targetPort: 4000
   selector:
     name: signed-commit-check
